fixed time not showing

--- a/src/index.css
+++ b/src/index.css
@@ -78,9 +78,9 @@ a {
   justify-content: center;
 }
 .dot {
-  width: 10px;
-  height: 10px;
-  margin: 0 5px;
+  width: 5px;
+  height: 5px;
+  margin: 0 3px;
   background-color: gray;
   border-radius: 50%;
   animation: bounce 1.5s infinite;
